Bug 1274991 - Consider ancestor scale transforms when deciding whether to prerender transformed content. r=mstange

MozReview-Commit-ID: AnmSSy9YviP